Fix some of the header's elements alignment

--- a/style.css
+++ b/style.css
@@ -180,7 +180,6 @@ body#portfolio #content {
 /* Main nav */
 #mainMenu {
     position:absolute;
-    left:-18px;
     top:0;
 }
 
@@ -192,7 +191,7 @@ body#portfolio #content {
     display:block;
     height:49px;
     color:#ccc;
-    padding:36px 18px 0;
+    padding:36px 15px 0;
     font-size:17px;
     background:url(images/bk_mainmenu.png) 0 -78px no-repeat;
 }
@@ -264,7 +263,7 @@ body#portfolio #content {
 
 #topSearch {
     position:absolute;
-    right:5px;
+    right:0px;
     top:25px;
 }
 
@@ -352,6 +351,7 @@ body#portfolio #content {
 }
 
 #blurb p {
+    min-height: 45px;
     margin:0;
 }
 
